Added testTileHtml function.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <div class="title">
             <h2><img id="logo" src="images/logo.png" alt="logo"></h2>
         </div>
-        <div class="contact-form">
+        <div class="input-form">
             <form class="input-fields">
                 <input id="search-term" type="text" class="input" placeholder="City">
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine">
-                <input type="hidden" id="latitude-input">
-                <input type="hidden" id="longitude-input">
                 <button id="search">Go</button>
             </form>
         </div>
