--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <form class="input-fields">
                 <input id="search-term" type="text" class="input" placeholder="City">
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine">
+                <input type="hidden" id="latitude-input">
+                <input type="hidden" id="longitude-input">
                 <button id="search">Go</button>
             </form>
         </div>
