--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div class="input-form">
             <form class="input-fields">
-                <input id="search-term" type="text" class="input" placeholder="City">
-                <input id="cuisine" type="text" class="input" placeholder="Cuisine">
+                <input id="search-term" type="text" class="input" placeholder="City" required>
+                <input id="cuisine" type="text" class="input" placeholder="Cuisine" required>
                 <input type="hidden" id="latitude-input">
                 <input type="hidden" id="longitude-input">
                 <button id="search">Go</button>
