--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+    <section id="results" class="hidden">
+        <ul id="results-list">
+        </ul>
+    </section>
     <div class="wrapper">
         <div class="title">
             <h2><img id="logo" src="images/logo.png" alt="logo"></h2>
