Created a new header for the page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 
+<div class="header hidden" id="myHeader">
+    <h2 class="header-content"><img class= "header-img" src="images/header.png" alt="Go back to search button"></h2>
+</div>
+
 <body>
     <section id="results" class="hidden">
         <ul id="results-list">
