Testing new header styling rules.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <div class="header hidden" id="myHeader">
-    <h2 class="header-content"><img class= "header-img" src="images/header.png" alt="Go back to search button"></h2>
+    <h2 class="header-content">
+        <img class= "header-img" src="images/header.png" alt="Go back to search button">
+        <img class="search-img" src="images/back-to-search.png" alt="Back to search">
+    </h2>
 </div>
 
 <body>
