--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="header hidden" id="myHeader">
     <h2 class="header-content">
         <img class= "header-img" src="images/header.png" alt="Go back to search button">
+        <img class="text-img" src="images/logo-text.png" alt="Plan By Plate">
         <img class="search-img" src="images/back-to-search.png" alt="Back to search">
     </h2>
 </div>
