Additional changes to app.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul id="results-list">
         </ul>
     </section>
-    <div class="wrapper">
+    <div class="wrapper hidden">
         <div class="title">
             <h2><img id="logo" src="images/logo.png" alt="logo"></h2>
         </div>
@@ -29,7 +29,7 @@
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine" required>
                 <input type="hidden" id="latitude-input">
                 <input type="hidden" id="longitude-input">
-                <button id="search">Go</button>
+                <button id="search">Search</button>
             </form>
         </div>
     </div>
