Added favicon image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Plan By Plate</title>
-	<link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <div class="header hidden" id="myHeader">
