Added type to search button.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine" required>
                 <input type="hidden" id="latitude-input">
                 <input type="hidden" id="longitude-input">
-                <button id="search">Search</button>
+                <button type="submit" id="search">Search</button>
             </form>
         </div>
     </div>
