Made the back image into a button element.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h2 class="header-content">
         <img class= "header-img" src="images/header.png" alt="Go back to search button">
         <img class="text-img" src="images/logo-text.png" alt="Plan By Plate">
-        <img class="search-img" src="images/back-to-search.png" alt="Back to search">
+        <button id="back">
+            <img class="search-img" src="images/back-to-search.png" alt="Back to search">
+        </button>
     </h2>
 </div>
 
@@ -30,7 +32,7 @@
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine" required>
                 <input type="hidden" id="latitude-input">
                 <input type="hidden" id="longitude-input">
-                <button type="submit" id="search">Search</button>
+                <button id="search" type="submit" id="search">Search</button>
             </form>
         </div>
     </div>
