--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <div class="header hidden" id="myHeader">
     <h2 class="header-content">
         <img class= "header-img" src="images/header.png" alt="Go back to search button">
-        <img class="text-img" src="images/logo-text.png" alt="Plan By Plate">
+        <button id="plates">
+            <img class="text-img" src="images/logo-text.png" alt="Plan By Plate">
+        </button>
         <button id="back">
             <img class="search-img" src="images/back-to-search.png" alt="Back to search">
         </button>
@@ -32,7 +34,7 @@
                 <input id="cuisine" type="text" class="input" placeholder="Cuisine" required>
                 <input type="hidden" id="latitude-input">
                 <input type="hidden" id="longitude-input">
-                <button id="search" type="submit" id="search">Search</button>
+                <button type="submit" id="search">Search</button>
             </form>
         </div>
     </div>
