Removed recent meta tag change, program broke on mobile.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
+	<meta charset="UTF-8">
 	<title>Plan By Plate</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" href="images/favicon.png"/>
