Changed the plates html to be an empty list.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
                 <div class ="wrapper-tile">
                       <div class="tile-form">
                           <div class="tile-fields">
-                              <h2 id="name--1" class = "results"></h2>
-                              <h2 id="name--2" class = "results"></h2>
-                              <h2 id="name--3" class = "results"></h2>
-                              <h2 id="name--4" class = "results"></h2>
-                              <h2 id="name--5" class = "results"></h2>
+                              <ul id="name">
+                              </ul>
                               <button id="back-to-results">Back to Results</button>
                           </div>
                       </div>
