--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class ="wrapper-tile">
                       <div class="tile-form">
                           <div class="tile-fields">
-                              <h2 id="name"></h2>
+                            <h2 class="plate-names"></h2>
                               <button id="back-to-results">Back to Results</button>
                           </div>
                       </div>
