--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
     </div>
 
     <!-- ADDED TO PLATES POPUP BOX -->
-    <div class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h1 class="added--msg">Added to Your Plates</h1>
+    <section>
+        <div class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <h1 class="added--msg">Added to Your Plates</h1>
+            </div>
         </div>
-    </div>
+    </section>
 </body>
 
     <!-- YOUR PLATES -->
@@ -64,7 +66,7 @@
                 <div class ="wrapper-tile">
                       <div class="tile-form">
                           <div class="tile-fields">
-                            <h2 class="plate-names"></h2>
+                            <ul class="plate-names"></ul>
                               <button id="back-to-results">Back to Results</button>
                           </div>
                       </div>
