Corrected some html errors.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Plan By Plate</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" href="images/favicon.png"/>
@@ -19,13 +19,7 @@
     </h2>
 </div>
 
-<body>
-    <!-- ERROR MESSAGE -->
-    <section id="error" class="hidden">
-        <ul id="error-message">
-        </ul>
-    </section>
-
+<body
     <!-- SEARCH RESULTS -->
     <section id="results" class="hidden">
         <ul id="results-list">
@@ -57,30 +51,29 @@
             </div>
         </div>
     </section>
-</body>
 
     <!-- YOUR PLATES -->
     <section id="your-plates" class="hidden">
         <ul id="plates-list">
             <li>
                 <div class ="wrapper-tile">
-                      <div class="tile-form">
-                          <div class="tile-fields">
+                    <div class="tile-form">
+                        <div class="tile-fields">
                             <ul class="plate-names"></ul>
-                              <button id="back-to-results">Back to Results</button>
-                          </div>
-                      </div>
+                            <button id="back-to-results">Back to Results</button>
+                        </div>
+                    </div>
                 </div>
             </li>
         </ul>
     </section>
+</body>
 
 <!-- jQuery library. -->
 <script src="https://unpkg.com/jquery" crossorigin="anonymous"></script>
 
     <!-- Google Maps Javascript Library. -->
-<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?
-    v=3.exp&libraries=places&key=AIzaSyBoRpN_--w3lFXRNu1PIv_cho5xqP1E32s"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyBoRpN_--w3lFXRNu1PIv_cho5xqP1E32s"></script>
 
 <!-- Local JavaScript file. -->
 <script src = "index.js"></script>
