HTML error fixes.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h2>
 </div>
 
-<body
+<body>
     <!-- SEARCH RESULTS -->
     <section id="results" class="hidden">
         <ul id="results-list">
@@ -73,7 +73,7 @@
 <script src="https://unpkg.com/jquery" crossorigin="anonymous"></script>
 
     <!-- Google Maps Javascript Library. -->
-<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyBoRpN_--w3lFXRNu1PIv_cho5xqP1E32s"></script>
+<script src="//maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyBoRpN_--w3lFXRNu1PIv_cho5xqP1E32s"></script>
 
 <!-- Local JavaScript file. -->
 <script src = "index.js"></script>
